--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    implementation 'org.projectlombok:lombok' //추가
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' //추가
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
