--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 
     implementation 'org.projectlombok:lombok' //추가
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa' //추가
+    runtimeOnly 'com.h2database:h2' //추가
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
