--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation 'org.projectlombok:lombok' //추가
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa' //추가
     runtimeOnly 'com.h2database:h2' //추가
+    compileOnly 'org.projectlombok:lombok'// 이거?
+    annotationProcessor 'org.projectlombok:lombok' //이거?
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
