chore: RDS 연동을 위한 mysql 패키지 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
+//    runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -30,6 +30,9 @@ dependencies {
 
     // JSON 객체 라이브러리
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
+    //RDS 연동
+    runtimeOnly 'com.mysql:mysql-connector-j'
 }
 
 tasks.named('test') {
