--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'// 이거?
     annotationProcessor 'org.projectlombok:lombok' //이거?
 
+    implementation 'mysql:mysql-connector-java:8.0.32' // mysql
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
