--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,11 @@
 spring:
   datasource:
-    url : jdbc:h2:tcp://localhost/~/kusitms
-    username : sa
-    password :
-    driver-class-name : org.h2.Driver
+    #    url : jdbc:h2:tcp://localhost/~/kusitms
+    url : jdbc:mysql://localhost:3306/test
+    username : root
+    password : 비밀번호
+    #    driver-class-name : org.h2.Driver
+    driver-class-name : com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
@@ -12,6 +14,11 @@ spring:
       hibernate:
         #        show_sql: true
         format_sql: true
+    database-platform: org.hibernate.dialect.MySQLDialect
+    open-in-view: false
+#    show-sql: true
+#    hibernate:
+#      ddl-auto: update
 
 logging.level:
   org.hibernate.SQL: debug
