--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     // jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    //jwt
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 }
 
 tasks.named('test') {
